<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.MoreFragment">


    <LinearLayout
        android:id="@+id/llAboutUs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="8dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_about_us"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/aboutUs"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/cairo_regular"
            android:layout_marginStart="10dp"
            android:textColor="#000"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#737377"/>

    <LinearLayout
        android:id="@+id/llContactUS"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:layout_marginBottom="8dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_contact"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/contactUs"
            android:textSize="18sp"
            android:fontFamily="@font/cairo_regular"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textColor="#000"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#737377"/>

    <LinearLayout
        android:id="@+id/llFacebook"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/facebook_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/facebook"
            android:textSize="18sp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#000"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#737377"/>
    <LinearLayout
        android:id="@+id/llRateApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/rate_app"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rateApp"
            android:textSize="18sp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#000"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#737377"/>
    <LinearLayout
        android:id="@+id/llLogout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="8dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logout"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/logout"
            android:textSize="18sp"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#000"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#737377"/>
</LinearLayout>